Fix the checkboxes and radio buttons on Firefox
No focus has been put on accessibility.

--- a/frontend/src/views/styles/_state.scss
+++ b/frontend/src/views/styles/_state.scss
@@ -2,6 +2,16 @@
   display: none !important;
 }
 
+.is-visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 .is-stretch {
   display: flex;
   display: -ms-box;
